--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,68 @@
 html {
-    font-size: 15px;
-    box-sizing:border-box;
+  font-size: 15px;
+  box-sizing: border-box;
 }
 
 * {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 li {
-   list-style: none;
+  list-style: none;
 }
-
 
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    font-size: 1rem;
-    color: #000;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 1rem;
+  color: #000;
 }
 
-.select{
-   margin: 0 auto;
-    position: relative;
-    max-width: 50rem;
-    margin-bottom: 1px;
+.select {
+  margin: 0 auto;
+  position: relative;
+  max-width: 50rem;
+  margin-bottom: 1px;
 }
 
 .select:after {
-    content: "";
-    display: block;
-    border-style: solid;
-    border-width: 8px 5px 0 5px;
-     border-color: #000 transparent transparent transparent; 
-    pointer-events: none;
+  content: "";
+  display: block;
+  border-style: solid;
+  border-width: 8px 5px 0 5px;
+  border-color: #000 transparent transparent transparent;
+  pointer-events: none;
 
-    position: absolute;
-    top: 50%;
-    right: 1rem;
-    z-index: 1;
-    margin-top: -3px;
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  z-index: 1;
+  margin-top: -3px;
 }
 
 .select select {
-    display: block;
-    width: 100%;
-    padding: .75rem 2.5rem .75rem 1rem;
-    background: none;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    -webkit-appearance: none;
-    appearance: none;
-    font-family: inherit;
-    font-size: 1rem;
-    color: #444;
+  display: block;
+  width: 100%;
+  padding: 0.75rem 2.5rem 0.75rem 1rem;
+  background: none;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  -webkit-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  font-size: 1rem;
+  color: #444;
 }
 
 .select select:focus {
-    outline: 0;
-    border-color: #0891e6;
-    background-color:#ccc;
+  outline: 0;
+  border-color: #0891e6;
+  background-color: #ccc;
 }
 
-@media (max-width: 992px){
-
-.col-md-7 {
-  width: 58.33333333%;
-  flex-basis: 50%;
+@media (max-width: 992px) {
+  .col-md-7 {
+    width: 58.33333333%;
+    flex-basis: 50%;
+  }
 }
-}
-
-
